
add_executable(
        zul
        main.cpp
        System.cpp
        System.h
        Logger.cpp
        Logger.h
        Lexer.cpp
        Lexer.h
        Utility.cpp
        Utility.h
        Parser.cpp
        Parser.h
        AST.h
        AST.cpp
        ZulContext.cpp
        ZulContext.h
        Zulstdio.h
)
